# rudy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
cert/: ca.conf  gen_ca  gen_svr_cert  host.conf
cert/config/: ca.conf  host-ext.conf  host.conf
src/: main.rs  proxy.rs  request.rs  response.rs  rudy_tui.rs  tls.rs  utils.rs
tui/: Cargo.toml
tui/src/: main.rs
