[package]
name = "rudy"
version = "0.1.0"
authors = ["Mike Lloyd <michael.lloyd03@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.38"
openssl-sys = "0.9.72"
anyhow = "1.0.56"
actix-web = { version = "4.0.1", features = ["openssl"] }
clap = "3.1.12"
url = "2.2.2"
awc = "3.0.0"
