[package]
name = "rudy"
version = "0.1.0"
authors = ["Mike Lloyd <michael.lloyd03@github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hudsucker = { version = "0.17.2", features = ["full"] }
rustls-pemfile = "1.0.0"
tokio = { version = "1.18.2", features = ["signal", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.17.1"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
tungstenite = "0.17.2"
